--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,9 +9,9 @@ description = "A Python-based auto-response bot to monitor and generate relevant
 readme = "README.md"
 license = { file = "LICENSE" }
 authors = [
-  { name = "Mengnan Li", email = "mengnanli91@gmail.com" }
-  { name = "Logan Harbour", email = "loganhharbour@gmail.com" }
-  { name = "Gary(Tianchen) Hu", email = "hugary1995@gmail.com" }
+  { name = "Mengnan Li", email = "mengnanli91@gmail.com" },
+  { name = "Logan Harbour", email = "loganhharbour@gmail.com" },
+  { name = "Gary(Tianchen) Hu", email = "hugary1995@gmail.com" },
   { name = "Cody Permann", email = "cody.permann@inl.gov" }
 ]
 requires-python = ">=3.10"
