Refactor ranger main function, add validation option

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,45 +1,11 @@
-[build-system]
-requires = ["setuptools>=61.0", "wheel"]
-build-backend = "setuptools.build_meta"
-
 [project]
-name = "moose-discussion-bot"          # replace with your desired distribution name
+name = "ranger"
 version = "0.1.0"
-description = "A Python-based auto-response bot to monitor and generate relevant responses for new discussions"
-readme = "README.md"
-license = { file = "LICENSE" }
-authors = [
-  { name = "Mengnan Li", email = "mengnanli91@gmail.com" },
-  { name = "Logan Harbour", email = "loganhharbour@gmail.com" },
-  { name = "Gary(Tianchen) Hu", email = "hugary1995@gmail.com" },
-  { name = "Cody Permann", email = "cody.permann@inl.gov" }
-]
-requires-python = ">=3.10"
 
-dependencies = [
-  "sentence-transformers",
-  "numpy",
-  "pandas",
-  "llama_index",
-  "llama-index-embeddings-huggingface",
-  "pathlib",
-  "certifi",
-  "requests",
-  "dotenv",
-]
-
-[project.urls]
-Homepage = "https://github.com/MengnanLi91/moose-discussion-bot"
-Repository = "https://github.com/MengnanLi91/moose-discussion-bot"
-Documentation = "https://github.com/MengnanLi91/moose-discussion-bot/blob/main/README.md"
-
-[project.optional-dependencies]
-dev = [
-  "pytest",
-]
+[build-system]
+requires = ["setuptools>=61.0"]
+build-backend = "setuptools.build_meta"
 
 [tool.setuptools]
 package-dir = {"" = "src"}
-
-[tool.setuptools.packages.find]
-where = ["src"]
+packages = ["ranger"]
