--- a/.github/workflows/RANGER.yml
+++ b/.github/workflows/RANGER.yml
@@ -1,34 +1,37 @@
-name: RANGER
+name: RANGER - Auto Reply (Discussions)
+
 on:
   discussion:
-    types:
-      - created
+    types: [created]
+
+permissions:
+  contents: read
+  discussions: write
 
 jobs:
   run_bot:
-    runs-on: [ubuntu-latest]
+    # Skip if the discussion is in a Polls category
+    if: ${{ !(contains(github.event.discussion.category.name, 'Poll') || github.event.discussion.category.slug == 'polls') }}
+    runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-        with:
-          ref: MOOSE_discussion_bot
-
-      - name: Set up Python
-        uses: actions/setup-python@v4
+      - uses: actions/checkout@v4
+      - uses: actions/setup-python@v5
         with:
           python-version: "3.10"
+          cache: pip
+      - run: python -m pip install -r requirements.txt
 
-      - name: Install dependencies
-        run: pip install -r requirements.txt
-
-      - name: Run discuss bot
-        run: python src/GitHubBot.py
-
+      - name: Run bot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DB_DIR: "python/MooseDiscussion/database"
-          TOP_N: 5
-          THRESHOLD: 0.2
+          DB_DIR: ${{ github.workspace }}/python/MooseDiscussion/database
+          TOP_N: "5"
+          THRESHOLD: "0.2"
           MODEL_NAME: "all-MiniLM-L12-v2"
-          GITHUB_ACTOR: "MOOSE bot"
+        run: |
+          python RANGER.py --config config.yaml bot \
+            --db-dir "$DB_DIR" \
+            --model-name "$MODEL_NAME" \
+            --top-n "$TOP_N" \
+            --threshold "$THRESHOLD"
