--- a/.github/workflows/RANGER.yml
+++ b/.github/workflows/RANGER.yml
@@ -25,7 +25,7 @@ jobs:
       - name: Run bot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          DB_DIR: ${{ github.workspace }}/python/MooseDiscussion/database
+          DB_DIR: ${{ github.workspace }}/database
           TOP_N: "5"
           THRESHOLD: "0.2"
           MODEL_NAME: "all-MiniLM-L12-v2"
