Add debug logger

--- a/.github/workflows/RANGER.yml
+++ b/.github/workflows/RANGER.yml
@@ -3,7 +3,6 @@ name: RANGER - Auto Reply (Discussions)
 on:
   discussion:
     types: [created]
-
 permissions:
   contents: read
   discussions: write
@@ -27,9 +26,17 @@ jobs:
           TOP_N: "5"
           THRESHOLD: "0.2"
           MODEL_NAME: "all-MiniLM-L12-v2"
+          GITHUB_REPO: ${{ github.repository }}
         run: |
           python RANGER.py --config config.yaml bot \
             --db-dir "$DB_DIR" \
             --model-name "$MODEL_NAME" \
             --top-n "$TOP_N" \
             --threshold "$THRESHOLD"
+
+      - name: Show event summary
+        run: |
+          echo "event=${{ github.event_name }}"
+          echo "repo=${{ github.repository }}"
+          echo "db = ${{ github.workspace }}/database"
+          echo "discussion.number=${{ github.event.discussion.number }}"
