--- a/.github/workflows/validation.yml
+++ b/.github/workflows/validation.yml
@@ -102,13 +102,13 @@ jobs:
           PYTHONPATH: "${{ github.workspace }}:${{ github.workspace }}/src"
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          python RANGER.py --config config.yaml validation             --pin-file pinned.txt             --val-out-dir .ci/validation/raw             --val-db .ci/validation_db             --prompt "${{ github.event.inputs.prompt }}"             --write-golden .ci/validation/golden.txt             --compare normalize
+          python RANGER.py --config config.yaml validation
 
       - name: Upload validation artifacts
         uses: actions/upload-artifact@v4
         with:
           name: validation-artifacts
           path: |
-            .ci/validation/**/* 
+            .ci/validation/**/*
             .ci/validation_db/**
             .ci/validation/raw/**
