Debug RANGER workflow

--- a/.github/workflows/RANGER.yml
+++ b/.github/workflows/RANGER.yml
@@ -21,25 +21,30 @@ jobs:
 
       - name: Show event summary
         run: |
-          echo "event=${{ github.event_name }}"
-          echo "repo=${{ github.repository }}"
+          echo "GITHUB_REPOSITORY=${{ github.repository }}"
+          echo "GITHUB_OWNER=${{ github.repository_owner }}"
+          echo "GITHUB_REPO=${{ github.event.repository.name }}"
           echo "db = ${{ github.workspace }}/database"
           echo "discussion.number=${{ github.event.discussion.number }}"
 
       - name: Run bot
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          GITHUB_REPO: ${{ github.event.repository.name }}
+          GITHUB_OWNER: ${{ github.repository_owner }}
+
           DB_DIR: ${{ github.workspace }}/database
           TOP_N: "5"
           THRESHOLD: "0.2"
           MODEL_NAME: "all-MiniLM-L12-v2"
-          GITHUB_REPO: ${{ github.repository }}
+          LOG_LEVEL: DEBUG
 
         run: |
           python RANGER.py --config config.yaml bot \
             --db-dir "$DB_DIR" \
             --model-name "$MODEL_NAME" \
             --top-n "$TOP_N" \
-            --threshold "$THRESHOLD"
+            --threshold "$THRESHOLD" \
+            --debug
 
 
