Remove __pycache__ folder

--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,4 @@
-__pycache__/
+__pycache__
 *.py[cod]
 .pytest_cache/
 .venv/
@@ -6,4 +6,4 @@ dist/
 build/
 *.egg-info/
 .DS_Store
-validation_db/
+validation_db
